languages/io-automaton-fe/src/test/resources/valid/motorstopper/MotorStopperJava.ioautomaton
package valid.motorstopper;

import valid.motorstopper.JavaCmd;

automaton MotorStopperJava {

  output JavaCmd cmd;

  state Stopping;
    
  initial Stopping / {JavaCmd.STOP};
      
  Stopping -> Stopping / {JavaCmd.STOP};
    
}