languages/io-automaton-fe/src/test/resources/invalid/UseOfUndefinedStates.ioautomaton
package invalid;

automaton UseOfUndefinedStates{

    input int a;
    output int b;
    
    state A,B;
    
    initial A;
    
    A->B;
    A->C;
    D->B;
    C->D;
    D;

}